--- a/css/styleslogin.css
+++ b/css/styleslogin.css
@@ -55,6 +55,7 @@ header h1 {
   color: white;
   border-radius: 12px;
   cursor: pointer;
+  margin-top: 8px;
 }
 
 .form-box button:hover {
@@ -62,3 +63,50 @@ header h1 {
   transform: scale(1.05);
   transition-duration: 0.7s;
 }
+
+
+.modal2FA-content h2 {
+  font-size: 1.5rem;
+}
+.modal2FA-content p {
+  font-size: 0.9rem;
+}
+
+.modal-senha {
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  display: none; /* Oculto por padrão */
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content-senha {
+  background-color: #fff;
+  padding: 30px 40px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 400px;
+  width: 90%;
+  box-shadow: 0px 5px 15px rgba(0,0,0,0.3);
+  position: relative;
+}
+
+.modal-content-senha p {
+  font-size: 18px;
+  margin: 0;
+}
+
+.fechar {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
