--- a/css/camisa.css
+++ b/css/camisa.css
@@ -271,6 +271,9 @@ main {
   box-shadow: 0 2px 10px rgba(255,183,77,0.13);
   transition: background 0.2s, color 0.2s, box-shadow 0.2s;
   display: block;
+
+  text-decoration: none;   /* remove underline de links */
+  text-align: center;      /* centraliza o texto */
 }
 
 #pagarCarrinho:hover {
